# YData

ClassMaterial/: pyproject.toml  requirements.txt  requirements_with_llms.txt
ClassMaterial/class_code/: class_-1_answers.ipynb  class_00.ipynb
ClassMaterial/homework/: homework_00.ipynb
ClassMaterial/practice_code/: practice_00.ipynb
