[project]
name = "ydata-uv-2025f1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "bokeh>=3.7.3",
    "dask>=2025.7.0",
    "datasets>=4.0.0",
    "geopandas>=1.1.1",
    "geoplot>=0.5.1",
    "imageio>=2.37.0",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "ipython-sql>=0.5.0",
    "ipywidgets>=8.1.7",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.8.1",
    "jupyterlab>=4.4.5",
    "jupyterlab-server>=2.27.3",
    "matplotlib>=3.10.5",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "notebook>=7.4.5",
    "numexpr>=2.11.0",
    "numpy>=2.1.3",
    "pandas>=2.3.1",
    "pandas-datareader>=0.10.0",
    "pillow>=11.3.0",
    "pip>=25.2",
    "plotly>=6.2.0",
    "polars>=1.32.2",
    "pycurl>=7.45.6",
    "pymysql>=1.1.1",
    "quarto-cli>=1.7.33",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "send2trash>=1.8.3",
    "soupsieve>=2.7",
    "sqlalchemy>=2.0.42",
    "statsmodels>=0.14.5",
    "sympy>=1.14.0",
    "ydata",
]

[tool.uv.sources]
ydata = { git = "https://github.com/yuejiechi/YData_package.git", rev = "main" }
